--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
+#.element {
+    width: 150px;
+    height: 150px;
+    background-color: #000000;
 
-/* Your CSS Code here. */
+}
+#element p;
+{
+    padding: hello-accio;
+    Text color:white(#ffffff);
+    left margin:32px
+    padding on all sides:10px;
+    
+
+}
